--- a/src/components/footer/page.module.css
+++ b/src/components/footer/page.module.css
@@ -1,8 +1,9 @@
-.container{
-  height: 50px;
-  display: flex;  
+.container {
+  height: 100px;
+  display: flex;
+  flex-direction: column;
   color: rgb(142, 155, 255);
-    background-color: rgb(255, 255, 255);
-    align-content: space-between;
-    
-  }
+  background-color: rgb(255, 255, 255);
+  align-content: space-between;
+
+}
