--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -17,6 +17,16 @@
   background: linear-gradient(to bottom, #194c33, #bbb);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  animation: scaleInText 1s ease-in-out forwards;
+}
+
+@keyframes scaleInText {
+  0% {
+    transform: scale(0.5);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 .imgContainer {
