--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -1,23 +1,45 @@
-.container{
-    height: 100px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .logo{
-    font-weight: bolder;
-    font-size: 22px;
-  }
-  .links{
-display:flex ;
-align-items: center;
-gap: 20px;
-  }
-  .logout{
-    padding: 5px;
-    border: none;
-    background-color: #53c28b;
-    color: antiquewhite;
-    cursor: pointer;
-    border-radius: 3px;
-  }
+.container {
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+  background-color: #285e85;
+}
+
+.logo {
+  font-weight: bolder;
+  font-size: 22px;
+}
+
+.links {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.link {
+  color: #fff;
+  position: relative;
+  padding: 10px 15px;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+.link:hover {
+  background-color: #3d3d3d;
+  text-decoration: underline;
+}
+
+.logout {
+  padding: 5px;
+  border: none;
+  background-color: #53c28b;
+  color: antiquewhite;
+  cursor: pointer;
+  border-radius: 3px;
+}
+
+.logout:hover {
+  background-color: #439f6d;
+}
