--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -9,7 +9,8 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1rem;
+  padding-left: 35px;
 }
 
 .title {
@@ -44,22 +45,7 @@
   border-radius: 10px;
 }
 
-.button {
-  margin-top: 15px;
-  padding: 1rem 2rem;
-  background-color: #194c33;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  font-size: 16px;
-  cursor: pointer;
-  transition: background-color 0.3s;
-  width: max-content;
-}
 
-.button:hover {
-  background-color: #219146;
-}
 
 .desc {
   font-size: 18px;
