--- a/src/app/conseil/page.module.css
+++ b/src/app/conseil/page.module.css
@@ -1,28 +1,115 @@
 .container {
-  color: rgb(203, 133, 133);
-  background-color: rgb(29, 45, 104);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  background-color: #f7f7f7;
 }
 
+.item {
+  background-color: white;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  padding: 20px;
+  margin: 20px;
+  width: 70%;
+  max-width: 800px;
+}
 
-/* .item {
-  } */
-
-/* .header {
-
-} */
+.header {
+  position: relative;
+  height: 265px;
+  width: 100%;
+  overflow: hidden;
+}
 
 .img {
-  height: 32%;
-  width: 39%;
+  width: 100%;
+  height: 265px;
   object-fit: cover;
-  color: transparent;
+}
+
+.imgText {
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: white;
+}
+
+.imgText h1 {
+  font-size: 28px;
+  margin-bottom: 10px;
+
+}
+
+.imgText h1,
+.imgText h2 {
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 10px 20px;
+}
+
+.imgText h2 {
+  font-size: 18px;
+  opacity: 0.8;
 }
 
 .title {
-  font-size: 24px;
+  font-size: 28px;
+  margin: 20px 0;
+  color: #333;
+  text-align: center;
+}
+
+.list {
+  padding-left: 50px;
+  margin: 0;
+  font-size: 18px;
+  color: #333;
+}
+
+.list li {
+  margin-bottom: 10px;
+  font-weight: bold;
+}
+
+.list h3,
+.list p {
+  margin: 5px 0;
+}
+
+/* .button {
+  display: flex;
+  justify-content: center;
   margin-top: 20px;
 }
 
-/* .list {
+.button button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+}
 
-  } */
+.button button:hover {
+  background-color: #0056b3;
+} */
+
+
+/* Media query  */
+@media (max-width: 768px) {
+  .imgText h1 {
+    font-size: 20px;
+    /* Taille du texte réduite */
+  }
+
+  .imgText h2 {
+    font-size: 16px;
+    /* Taille du texte réduite */
+  }
+}
