correction sémantique et responsive mobile first

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,10 +20,9 @@ a {
 max-width: 1366px;
 min-height: 100vh;
 margin: 0 auto;
-padding: 0 18x;
 display: flex;
 flex-direction: column;
-justify-content: space-between;
+justify-content: space-evenly;
 
 }
 
@@ -32,3 +31,4 @@ justify-content: space-between;
     color-scheme: dark;
   }
 }
+
