--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,21 +1,30 @@
+/* Styles pour les écrans mobiles (par défaut) */
 .container {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 3rem;
+  flex-direction: column;
+  gap: 1rem;
 }
 
+
+/* Item
 .item {
   flex: 1;
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding-left: 35px;
+  margin: 15px 15px 15px 23px;
+  background-clip: border-box; 
+} */
+.item {
+  margin: 15px;
+
 }
 
+/* Title */
 .title {
-  font-size: 32px;
+  font-size: 24px;
   background: linear-gradient(to bottom, #194c33, #bbb);
+  background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   animation: scaleInText 1s ease-in-out forwards;
@@ -25,6 +34,7 @@
   0% {
     transform: scale(0.5);
   }
+
   100% {
     transform: scale(1);
   }
@@ -33,7 +43,7 @@
 .imgContainer {
   position: relative;
   width: 100%;
-  height: 400px;
+  height: 100px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -46,8 +56,34 @@
 }
 
 
-
 .desc {
   font-size: 18px;
   font-weight: 400;
+}
+
+/* Styles pour les écrans tablette */
+@media screen and (min-width: 768px) {
+  .item {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin: 15px;
+    background-clip: border-box;
+    align-items: center;
+  }
+
+  .title {
+    font-size: 32px;
+    text-align: center;
+
+  }
+
+  .imgContainer {
+    height: 343px;
+  }
+
+  .desc {
+    font-size: 20px;
+  }
 }
