--- a/src/app/conseil/page.module.css
+++ b/src/app/conseil/page.module.css
@@ -13,10 +13,11 @@
   border-radius: 8px;
   padding: 20px;
   margin: 20px;
-  width: 70%;
-  max-width: 800px;
+  width: 100%;
 }
-
+.item li {
+  color: black; 
+}
 .header {
   position: relative;
   height: 265px;
@@ -32,7 +33,7 @@
 
 .imgText {
   position: absolute;
-  top: 60%;
+  top: 42%;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
