responsive page conseil

--- a/src/app/conseil/page.module.css
+++ b/src/app/conseil/page.module.css
@@ -18,12 +18,12 @@
 .item li {
   color: black; 
 }
-.header {
+/* .header {
   position: relative;
   height: 265px;
   width: 100%;
   overflow: hidden;
-}
+} */
 
 .img {
   width: 100%;
