--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -4,7 +4,18 @@
   flex-direction: column;
   gap: 1rem;
 }
+.header {
+  /* position: relative; */
+  /* height: 265px; */
+  width: 100%;
+  overflow: hidden;
+}
 
+.img {
+  width: 100%;
+  height: 265px;
+  object-fit: cover;
+}
 
 /* Item
 .item {
