--- a/src/components/list/conseilList.module.css
+++ b/src/components/list/conseilList.module.css
@@ -58,3 +58,11 @@
         margin: 0;
     }
 }
+
+@media (min-width:900px) {
+    .container{
+        align-items: center;
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
+}
